--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>I'm Vasko.</h1>
-        <p>a programmer.</p>
+        <p>A React programmer.</p>
     </div>
     
 </body>
